# riffy

./: .gitignore  LICENSE  README.md  claude.md  example.py  pyproject.toml
examples/: README.md  example.py  export_chunks.py  modify_chunks.py  practical_demo.py
src/riffy/: __init__.py  exceptions.py  wav.py
tests/: README.md  __init__.py  conftest.py  test_chunk_modification.py  test_dataclasses.py  test_edge_cases.py  test_exceptions.py  test_export.py  test_integration.py  test_parser.py
